--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,3 +23,5 @@ jobs:
       run: npm install
     - name: Run the unit tests
       run: npm run test:unit
+    - name: Display softuni username
+      run: echo "vladyvarbanov"
