--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,3 +25,24 @@ jobs:
       run: npm run test:unit
     - name: Display softuni username
       run: echo "vladyvarbanov"
+
+  run-ui-tests:
+    needs: build_test
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout the repository
+      uses: actions/checkout@v4
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Install Playwright Browsers
+      run: npx playwright install
+    - name: Start the application
+      run: npm run start &
+    - name: Run the UI tests
+      run: npm run test:ui
